# mic

./: .copier-answers.yml  .gitignore  Makefile  Pipfile  README.md  justfile  main.py  pyproject.toml
src/mic/: __init__.py  __main__.py  cli.py  core.py  recorder.py
tests/: test_cli.py
