[project]
name = "mic"
version = "0.2.0"
description = "Record audio (quickly) from the command line, transcribe it with whisper and copy it to clipboard."
readme = "README.md"
authors = [
    { name = "coattosintetico", email = "msanchezgonzalez99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.14.0",
    "typer",
]

[project.scripts]
mic = "mic.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]
